[project]
name = "llm-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.13.2",
    "ipywidgets>=8.1.7",
    "notebook==7.1.2",
    "openai==1.31.1",
    "pandas>=2.3.3",
    "pydantic==2.7.3",
    "scikit-learn>=1.7.2",
    "tqdm==4.66.4",
]
